Create multi-page Leaflet map app

--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-index.html
-README.md
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta http-equiv="refresh" content="0; URL=accueil.html">
+  <title>Redirection</title>
+</head>
+<body>
+  <p>Redirection vers <a href="accueil.html">l'accueil</a>...</p>
+</body>
+</html>
