Clean up site files and fix map

--- a/map.html
+++ b/map.html
@@ -1,43 +1,23 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
- codex/creer-site-web-pour-carte-interactive
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
-  <link rel="stylesheet" href="style.css">
-  <title>Carte</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-sA+4w5C5Tg9HOfFpM9QubZsH4wMB36n8CDddXqpPyMo=" crossorigin="" />
+    <link rel="stylesheet" href="style.css">
+    <title>Carte</title>
 </head>
 <body>
 <nav>
-  <a href="accueil.html">Accueil</a>
-  <a href="map.html">Carte</a>
-  <a href="profil.html">Profil</a>
+    <a href="accueil.html">Accueil</a>
+    <a href="map.html">Carte</a>
+    <a href="profil.html">Profil</a>
 </nav>
 <main>
-  <h1>Carte interactive</h1>
-  <div id="map"></div>
-</main>
-<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-<script src="script.js"></script>
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carte Interactive</title>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-          integrity="sha256-sA+4w5C5Tg9HOfFpM9QubZsH4wMB36n8CDddXqpPyMo=" crossorigin=""/>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <nav>
-        <a href="accueil.html">Accueil</a>
-        <a href="profil.html">Profil</a>
-    </nav>
+    <h1>Carte interactive</h1>
     <div id="map" style="height: 80vh;"></div>
-
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-            integrity="sha256-o9N1j6Ps3kwKvfYI+1nv1Dj6ww2cJaIcJfLkA/SmrE4=" crossorigin=""></script>
-    <script src="script.js"></script>
- main
+</main>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-o9N1j6Ps3kwKvfYI+1nv1Dj6ww2cJaIcJfLkA/SmrE4=" crossorigin=""></script>
+<script src="script.js"></script>
 </body>
 </html>
