style: modernize site and add logo

--- a/accueil.html
+++ b/accueil.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <nav>
+    <img src="logo.svg" alt="Zwizz" class="logo">
     <a href="accueil.html">Accueil</a>
     <a href="map.html">Carte</a>
     <a href="profil.html">Profil</a>
