feat: improve map and homepage

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Profil</title>
+    <title>À propos</title>
 </head>
 <body>
 <nav>
@@ -15,17 +15,8 @@
     <a href="about.html">À propos</a>
 </nav>
 <main>
-    <h1>Mon Profil</h1>
-    <form id="profile-form">
-        <label for="age">Âge :</label>
-        <input type="number" id="age" name="age" required>
-        <label for="gender">Genre :</label>
-        <select id="gender" name="gender">
-            <option value="homme">Homme</option>
-            <option value="femme">Femme</option>
-        </select>
-        <button type="submit" class="button">Sauvegarder</button>
-    </form>
+    <h1>À propos</h1>
+    <p>Zwizz est un site pour rencontrer quelqu'un et découvrir où se trouvent les autres utilisateurs.</p>
 </main>
 <script src="script.js"></script>
 </body>
