--- a/accueil.html
+++ b/accueil.html
@@ -12,10 +12,14 @@
     <a href="accueil.html">Accueil</a>
     <a href="map.html">Carte</a>
     <a href="profil.html">Profil</a>
+    <a href="about.html">À propos</a>
 </nav>
 <main>
     <h1>Bienvenue</h1>
     <a class="button" href="map.html">Aller sur la map</a>
+    <section id="profiles" style="margin-top:2em;">
+        <h2>Profils aléatoires</h2>
+    </section>
 </main>
 <script src="script.js"></script>
 </body>
