--- a/map.html
+++ b/map.html
@@ -14,10 +14,12 @@
     <a href="accueil.html">Accueil</a>
     <a href="map.html">Carte</a>
     <a href="profil.html">Profil</a>
+    <a href="about.html">À propos</a>
 </nav>
 <main>
     <h1>Carte interactive</h1>
     <div id="map" style="height: 80vh;"></div>
+    <button id="remove-pin" class="button" style="margin-top:1em;">Supprimer mon pin</button>
 </main>
 <!-- Load Leaflet with CDN fallback -->
 <script src="node_modules/leaflet/dist/leaflet.js" onerror="this.onerror=null;this.src='https://unpkg.com/leaflet@1.9.4/dist/leaflet.js'"></script>
