Remove binary hero image and use remote link

--- a/accueil.html
+++ b/accueil.html
@@ -16,6 +16,10 @@
 </nav>
 <main>
     <h1>Bienvenue</h1>
+    <section id="intro">
+        <img src="https://images.unsplash.com/photo-1521120098171-556ded3b8fa4?auto=format&fit=crop&w=800&q=80" alt="Rencontres sur Zwizz" class="hero">
+        <p>Zwizz est l'endroit idéal pour rencontrer de nouvelles personnes et voir où elles se trouvent sur la carte. Créez votre profil, placez un pin et partez à la découverte!</p>
+    </section>
     <a class="button" href="map.html">Aller sur la map</a>
     <section id="profiles" style="margin-top:2em;">
         <h2>Profils aléatoires</h2>
