Add security and help pages and social features

--- a/aide.html
+++ b/aide.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
-    <title>À propos</title>
+    <title>Aide</title>
 </head>
 <body>
 <nav>
@@ -18,8 +18,15 @@
     <a href="about.html">À propos</a>
 </nav>
 <main>
-    <h1>À propos</h1>
-    <p>Zwizz est un site pour rencontrer quelqu'un et découvrir où se trouvent les autres utilisateurs.</p>
+    <h1>Aide</h1>
+    <h2>Comment ajouter un pin</h2>
+    <p>Cliquez sur la carte et placez votre pin à l’endroit désiré.</p>
+    <h2>Comment remplir son profil</h2>
+    <p>Rendez-vous sur la page Profil et sauvegardez votre âge, genre et photo.</p>
+    <h2>Comment interagir avec un autre utilisateur</h2>
+    <p>Cliquez sur son pin pour voir ses informations et liker son profil.</p>
+    <h2>Comment signaler un abus</h2>
+    <button class="button" onclick="alert('Merci pour votre signalement.')">Signaler</button>
 </main>
 <script src="script.js"></script>
 </body>
