--- a/map.html
+++ b/map.html
@@ -6,6 +6,7 @@
     <!-- Leaflet CSS with CDN fallback -->
     <link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css" onerror="this.href='https://unpkg.com/leaflet@1.9.4/dist/leaflet.css'" />
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.svg" type="image/svg+xml">
     <title>Carte</title>
 </head>
 <body>
@@ -14,6 +15,8 @@
     <a href="accueil.html">Accueil</a>
     <a href="map.html">Carte</a>
     <a href="profil.html">Profil</a>
+    <a href="securite.html">Sécurité</a>
+    <a href="aide.html">Aide</a>
     <a href="about.html">À propos</a>
 </nav>
 <main>
