--- a/securite.html
+++ b/securite.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
-    <title>À propos</title>
+    <title>Sécurité</title>
 </head>
 <body>
 <nav>
@@ -18,8 +18,13 @@
     <a href="about.html">À propos</a>
 </nav>
 <main>
-    <h1>À propos</h1>
-    <p>Zwizz est un site pour rencontrer quelqu'un et découvrir où se trouvent les autres utilisateurs.</p>
+    <h1>Conseils de sécurité</h1>
+    <ul>
+        <li>Faites attention aux inconnus.</li>
+        <li>Ne partagez jamais vos informations personnelles ou votre adresse.</li>
+        <li>En cas de comportement suspect, signalez-le.</li>
+        <li>Ce site n’est pas responsable des rencontres physiques. Soyez prudents.</li>
+    </ul>
 </main>
 <script src="script.js"></script>
 </body>
