--- a/accueil.html
+++ b/accueil.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.svg" type="image/svg+xml">
     <title>Accueil</title>
 </head>
 <body>
@@ -12,6 +13,8 @@
     <a href="accueil.html">Accueil</a>
     <a href="map.html">Carte</a>
     <a href="profil.html">Profil</a>
+    <a href="securite.html">Sécurité</a>
+    <a href="aide.html">Aide</a>
     <a href="about.html">À propos</a>
 </nav>
 <main>
