Show photo preview and update pin popup

--- a/profil.html
+++ b/profil.html
@@ -29,6 +29,7 @@
         </select>
         <label for="photo">Photo :</label>
         <input type="file" id="photo" accept="image/*">
+        <img id="photo-preview" class="popup-photo" style="display:none;">
         <button type="submit" class="button">Sauvegarder</button>
     </form>
 </main>
