Add logout capability

--- a/accueil.html
+++ b/accueil.html
@@ -70,6 +70,7 @@
   <a href="securite.html">Sécurité</a>
   <a href="aide.html">Aide</a>
   <a href="about.html">À propos</a>
+  <a href="#" id="logout-link">Déconnexion</a>
 </nav>
 
 <main>
