--- a/map.html
+++ b/map.html
@@ -18,6 +18,7 @@
     <a href="securite.html">Sécurité</a>
     <a href="aide.html">Aide</a>
     <a href="about.html">À propos</a>
+    <a href="#" id="logout-link">Déconnexion</a>
 </nav>
 <main>
     <h1>Carte interactive</h1>
