--- a/politique.html
+++ b/politique.html
@@ -16,6 +16,7 @@
     <a href="securite.html">Sécurité</a>
     <a href="aide.html">Aide</a>
     <a href="about.html">À propos</a>
+    <a href="#" id="logout-link">Déconnexion</a>
 </nav>
 <main>
     <h1>Politique d'utilisation</h1>
