--- a/age.html
+++ b/age.html
@@ -15,12 +15,26 @@
     <input type="date" id="dob" required />
     <label style="margin-top:1em;">
       <input type="checkbox" id="policy-check" />
-      J'accepte la <a href="politique.html" target="_blank">politique d'utilisation</a>
+      J'accepte la <a href="#" id="policy-link">politique d'utilisation</a>
     </label>
     <button type="submit" class="button">Entrer</button>
   </form>
   <p id="age-error" style="color:red; display:none;">Vous devez avoir au moins 18 ans pour accéder au site.</p>
   <p id="policy-error" style="color:red; display:none;">Vous devez accepter la politique d'utilisation pour continuer.</p>
+  <div id="policy-overlay" class="modal-overlay" style="display:none;"></div>
+  <div id="policy-modal" class="modal" style="display:none;">
+    <h2>Politique d'utilisation</h2>
+    <p>Cette page décrit les règles essentielles pour participer au service Zwizz. En accédant au site, vous acceptez ces conditions :</p>
+    <ol>
+      <li>Zwizz permet uniquement de partager une localisation approximative. Les informations saisies restent dans votre navigateur et ne sont pas conservées par nos serveurs.</li>
+      <li>Vous vous engagez à respecter les autres utilisateurs et à ne pas publier de contenus injurieux, offensants ou illégaux.</li>
+      <li>Ne divulguez pas vos informations personnelles sensibles et soyez vigilant lors de toute rencontre avec des inconnus.</li>
+      <li>Zwizz n'est pas responsable des rencontres physiques. Prenez toujours les mesures de sécurité nécessaires et privilégiez les lieux publics.</li>
+      <li>Tout comportement abusif pourra entraîner une exclusion immédiate de la plateforme.</li>
+    </ol>
+    <p>En continuant, vous confirmez avoir lu et accepté cette politique.</p>
+    <button id="policy-close" class="button">Fermer</button>
+  </div>
 </main>
 <script src="age-check.js"></script>
 </body>
