--- a/aide.html
+++ b/aide.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <nav>
-    <img src="logo.svg" alt="Zwizz" class="logo">
+    <img src="logozwizz.png" alt="Zwizz" class="logo">
     <a href="accueil.html">Accueil</a>
     <a href="map.html">Carte</a>
     <a href="profil.html">Profil</a>
