--- a/accueil.html
+++ b/accueil.html
@@ -7,12 +7,32 @@
     <link rel="icon" href="favicon.svg" type="image/svg+xml" />
     <title>Accueil</title>
     <style>
+      body::before {
+        content: "";
+        background: url("logozwizz.png") no-repeat center center;
+        background-size: 40%;
+        opacity: 0.05;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 0;
+        pointer-events: none;
+      }
+
+      main {
+        position: relative;
+        z-index: 1;
+      }
+
       .hero {
         width: 100%;
         max-height: 300px;
         object-fit: cover;
         border-radius: 10px;
       }
+
       .button {
         display: inline-block;
         background: #007bff;
@@ -24,9 +44,11 @@
         font-weight: bold;
         transition: 0.3s ease;
       }
+
       .button:hover {
         background: #0056b3;
       }
+
       .profile-card {
         display: inline-block;
         margin: 10px;
@@ -37,6 +59,7 @@
         text-align: center;
         background: #f9f9f9;
       }
+
       .popup-photo {
         width: 100%;
         height: 100px;
@@ -44,6 +67,7 @@
         border-radius: 8px;
         margin-bottom: 0.5em;
       }
+
       #mini-map {
         height: 250px;
         width: 100%;
@@ -51,6 +75,7 @@
         border: 1px solid #ccc;
         border-radius: 10px;
       }
+
       #cta {
         background: #ffe9d5;
         padding: 2em;
@@ -58,6 +83,7 @@
         margin-top: 2em;
         border-radius: 10px;
       }
+
       .feature-box {
         background: #f0f0f0;
         padding: 1em;
@@ -66,6 +92,31 @@
         text-align: center;
         font-weight: bold;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      }
+
+      .advanced-section {
+        margin-top: 3em;
+        background: #f4f4f4;
+        padding: 2em;
+        border-radius: 12px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+      }
+
+      .advanced-section h2 {
+        text-align: center;
+        margin-bottom: 1em;
+      }
+
+      .advanced-feature {
+        display: flex;
+        align-items: center;
+        gap: 1em;
+        margin-bottom: 1em;
+      }
+
+      .advanced-feature img {
+        width: 50px;
+        height: 50px;
       }
     </style>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
@@ -133,6 +184,40 @@
           <div class="feature-box">💬 Match & interaction instantanée</div>
           <div class="feature-box">
             🔒 Sécurité & confidentialité renforcées
+          </div>
+        </div>
+      </section>
+
+      <section class="advanced-section">
+        <h2>✨ Fonctionnalités à venir</h2>
+        <div class="advanced-feature">
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/1008/1008003.png"
+            alt="cam"
+          />
+          <div>
+            <strong>Cam to cam direct</strong><br />Parle avec les gens live
+            comme FaceTime
+          </div>
+        </div>
+        <div class="advanced-feature">
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/942/942748.png"
+            alt="audio"
+          />
+          <div>
+            <strong>Audio rooms</strong><br />Participe à des groupes vocaux
+            selon les centres d’intérêt
+          </div>
+        </div>
+        <div class="advanced-feature">
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/1077/1077035.png"
+            alt="share"
+          />
+          <div>
+            <strong>Partage rapide</strong><br />Envoie ton pin à tes amis via
+            QR ou lien instantané
           </div>
         </div>
       </section>
