--- a/accueil.html
+++ b/accueil.html
@@ -6,12 +6,13 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="favicon.svg" type="image/svg+xml" />
     <title>Accueil</title>
+
     <style>
       body::before {
         content: "";
-        background: url("logozwizz.png") no-repeat center center;
-        background-size: 40%;
-        opacity: 0.05;
+        background: url("logozwizz.png") no-repeat center center fixed;
+        background-size: contain;
+        opacity: 0.07;
         position: fixed;
         top: 0;
         left: 0;
@@ -21,7 +22,8 @@
         pointer-events: none;
       }
 
-      main {
+      main,
+      nav {
         position: relative;
         z-index: 1;
       }
@@ -93,32 +95,8 @@
         font-weight: bold;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       }
-
-      .advanced-section {
-        margin-top: 3em;
-        background: #f4f4f4;
-        padding: 2em;
-        border-radius: 12px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
-      }
-
-      .advanced-section h2 {
-        text-align: center;
-        margin-bottom: 1em;
-      }
-
-      .advanced-feature {
-        display: flex;
-        align-items: center;
-        gap: 1em;
-        margin-bottom: 1em;
-      }
-
-      .advanced-feature img {
-        width: 50px;
-        height: 50px;
-      }
     </style>
+
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   </head>
   <body>
@@ -184,40 +162,6 @@
           <div class="feature-box">💬 Match & interaction instantanée</div>
           <div class="feature-box">
             🔒 Sécurité & confidentialité renforcées
-          </div>
-        </div>
-      </section>
-
-      <section class="advanced-section">
-        <h2>✨ Fonctionnalités à venir</h2>
-        <div class="advanced-feature">
-          <img
-            src="https://cdn-icons-png.flaticon.com/512/1008/1008003.png"
-            alt="cam"
-          />
-          <div>
-            <strong>Cam to cam direct</strong><br />Parle avec les gens live
-            comme FaceTime
-          </div>
-        </div>
-        <div class="advanced-feature">
-          <img
-            src="https://cdn-icons-png.flaticon.com/512/942/942748.png"
-            alt="audio"
-          />
-          <div>
-            <strong>Audio rooms</strong><br />Participe à des groupes vocaux
-            selon les centres d’intérêt
-          </div>
-        </div>
-        <div class="advanced-feature">
-          <img
-            src="https://cdn-icons-png.flaticon.com/512/1077/1077035.png"
-            alt="share"
-          />
-          <div>
-            <strong>Partage rapide</strong><br />Envoie ton pin à tes amis via
-            QR ou lien instantané
           </div>
         </div>
       </section>
