--- a/accueil.html
+++ b/accueil.html
@@ -8,24 +8,9 @@
     <title>Accueil</title>
 
     <style>
-      body::before {
-        content: "";
+      body {
         background: url("logozwizz.png") no-repeat center center fixed;
-        background-size: contain;
-        opacity: 0.15;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 0;
-        pointer-events: none;
-      }
-
-      main,
-      nav {
-        position: relative;
-        z-index: 1;
+        background-size: cover;
       }
 
       .hero {
