Add Zwizz description to about page

--- a/about.html
+++ b/about.html
@@ -21,6 +21,12 @@
 <main>
     <h1>À propos</h1>
     <p>Zwizz est un site pour rencontrer quelqu'un et découvrir où se trouvent les autres utilisateurs.</p>
+    <p>Zwizz, c’est la façon la plus simple et rapide de rencontrer quelqu’un près de chez toi.</p>
+    <p>Tu places un pin sur la carte, tu indiques ton âge, ton genre, une photo, et les autres peuvent te voir en temps réel.</p>
+    <p>C’est fait pour ceux qui veulent une rencontre spontanée, sans prise de tête, sans imprévus.</p>
+    <p>Que ce soit pour un date, une discussion, ou juste briser la routine, Zwizz te connecte avec les gens autour.</p>
+    <p>Pas besoin d’attendre des jours ou de swiper dans le vide : tu vois qui est dispo maintenant, dans ta ville, et tu choisis si tu veux jaser ou aller plus loin.</p>
+    <p>Zwizz, c’est l’humain d’abord, en toute simplicité.</p>
 </main>
 <script src="script.js"></script>
 </body>
