Add Firebase auth system and pages

--- a/map.html
+++ b/map.html
@@ -24,7 +24,7 @@
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
     <title>Carte</title>
 </head>
-<body>
+<body data-auth="required">
 <nav>
     <img src="logozwizz.png" alt="Zwizz" class="logo">
     <a href="accueil.html">Accueil</a>
@@ -35,6 +35,7 @@
     <a href="aide.html">Aide</a>
     <a href="about.html">À propos</a>
     <a href="#" id="logout-link">Déconnexion</a>
+    <span id="user-info"></span>
 </nav>
 <main>
     <h1>Carte interactive</h1>
@@ -75,6 +76,12 @@
     document.body.appendChild(leafletScript);
   });
 </script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
+<script src="firebase-init.js"></script>
+<script src="auth.js"></script>
 <script src="script.js"></script>
+<script>initAuthGuard(true);</script>
 </body>
 </html>
