--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
     <a href="aide.html">Aide</a>
     <a href="about.html">À propos</a>
     <a href="#" id="logout-link">Déconnexion</a>
+    <span id="user-info"></span>
 </nav>
 <main>
     <h1>À propos</h1>
@@ -28,6 +29,12 @@
     <p>Pas besoin d’attendre des jours ou de swiper dans le vide : tu vois qui est dispo maintenant, dans ta ville, et tu choisis si tu veux jaser ou aller plus loin.</p>
     <p>Zwizz, c’est l’humain d’abord, en toute simplicité.</p>
 </main>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
+<script src="firebase-init.js"></script>
+<script src="auth.js"></script>
 <script src="script.js"></script>
+<script>initAuthGuard(false);</script>
 </body>
 </html>
