--- a/accueil.html
+++ b/accueil.html
@@ -114,6 +114,7 @@
       <a href="aide.html">Aide</a>
       <a href="about.html">À propos</a>
       <a href="#" id="logout-link">Déconnexion</a>
+      <span id="user-info"></span>
     </nav>
 
     <main>
@@ -236,7 +237,13 @@
         document.body.appendChild(leafletScript);
       });
     </script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
+    <script src="firebase-init.js"></script>
+    <script src="auth.js"></script>
     <script src="script.js"></script>
+    <script>initAuthGuard(false);</script>
     <script>
       function initMiniMap() {
         const container = document.getElementById("mini-map");
