--- a/politique.html
+++ b/politique.html
@@ -17,6 +17,7 @@
     <a href="aide.html">Aide</a>
     <a href="about.html">À propos</a>
     <a href="#" id="logout-link">Déconnexion</a>
+    <span id="user-info"></span>
 </nav>
 <main>
     <h1>Politique d'utilisation</h1>
@@ -30,6 +31,12 @@
     </ol>
     <p>En continuant, vous confirmez avoir lu et accepté cette politique.</p>
 </main>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
+<script src="firebase-init.js"></script>
+<script src="auth.js"></script>
 <script src="script.js"></script>
+<script>initAuthGuard(false);</script>
 </body>
 </html>
