--- a/profil.html
+++ b/profil.html
@@ -22,6 +22,8 @@
 <main>
     <h1>Mon Profil</h1>
     <form id="profile-form">
+        <label for="name">Nom ou surnom :</label>
+        <input type="text" id="name" name="name" required>
         <label for="age">Âge :</label>
         <input type="number" id="age" name="age" required>
         <label for="gender">Genre :</label>
