Implement login-first flow and age verification

--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Redirection</title>
   <script>
-    if (!localStorage.getItem('ageVerified')) {
-      window.location.href = 'age.html';
-    } else {
-      window.location.href = 'accueil.html';
-    }
+    window.location.href = 'login.html';
   </script>
 </head>
 <body>
