--- a/age.html
+++ b/age.html
@@ -20,6 +20,7 @@
     <button type="submit" class="button">Entrer</button>
   </form>
   <p id="age-error" style="color:red; display:none;">Vous devez avoir au moins 18 ans pour accéder au site.</p>
+  <p id="dob-error" style="color:red; display:none;">Date de naissance incorrecte.</p>
   <p id="policy-error" style="color:red; display:none;">Vous devez accepter la politique d'utilisation pour continuer.</p>
   <div id="policy-overlay" class="modal-overlay" style="display:none;"></div>
   <div id="policy-modal" class="modal" style="display:none;">
