--- a/signup.html
+++ b/signup.html
@@ -31,8 +31,8 @@
       <input type="email" id="email" required>
       <label for="password">Mot de passe</label>
       <input type="password" id="password" required>
-      <label for="age">Âge</label>
-      <input type="number" id="age" required>
+      <label for="dob">Date de naissance</label>
+      <input type="date" id="dob" required>
       <label for="gender">Genre</label>
       <select id="gender">
         <option value="homme">Homme</option>
