Add like tracking and display

--- a/favoris.html
+++ b/favoris.html
@@ -25,6 +25,10 @@
 <main>
     <h1>Mes Favoris</h1>
     <div id="fav-list"></div>
+    <section id="likes-section">
+        <h2>Likes reçus</h2>
+        <ul id="like-list"></ul>
+    </section>
 </main>
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
