--- a/map.html
+++ b/map.html
@@ -25,21 +25,7 @@
     <title>Carte</title>
 </head>
 <body data-auth="required">
-<nav>
-    <img src="logozwizz.png" alt="Zwizz" class="logo">
-    <a href="accueil.html">Accueil</a>
-    <a href="map.html">Carte</a>
-    <a href="profil.html">Profil</a>
-    <a href="favoris.html">Favoris</a>
-    <a href="securite.html">Sécurité</a>
-    <a href="aide.html">Aide</a>
-    <a href="about.html">À propos</a>
-    <a href="message.html">Messages</a>
-    <a href="login.html" id="login-link">Connexion</a>
-    <a href="signup.html" id="signup-link">Inscription</a>
-    <a href="#" id="logout-link">Déconnexion</a>
-    <span id="user-info"></span>
-</nav>
+<div id="nav-container"></div>
 <main>
     <h1>Carte interactive</h1>
     <div id="filter-menu">
@@ -82,6 +68,6 @@
 <script src="firebase-init.js"></script>
 <script src="auth.js"></script>
 <script src="script.js"></script>
-<script>initAuthGuard(true);</script>
+<script>fetch("nav.html").then(r=>r.text()).then(html=>{document.getElementById("nav-container").innerHTML=html;initAuthGuard(true);});</script>
 </body>
 </html>
