--- a/message.html
+++ b/message.html
@@ -8,21 +8,7 @@
     <title>Messages</title>
 </head>
 <body class="message-page" data-auth="required">
-<nav>
-    <img src="logozwizz.png" alt="Zwizz" class="logo">
-    <a href="accueil.html">Accueil</a>
-    <a href="map.html">Carte</a>
-    <a href="profil.html">Profil</a>
-    <a href="favoris.html">Favoris</a>
-    <a href="securite.html">Sécurité</a>
-    <a href="aide.html">Aide</a>
-    <a href="about.html">À propos</a>
-    <a href="message.html">Messages</a>
-    <a href="login.html" id="login-link">Connexion</a>
-    <a href="signup.html" id="signup-link">Inscription</a>
-    <a href="#" id="logout-link">Déconnexion</a>
-    <span id="user-info"></span>
-</nav>
+<div id="nav-container"></div>
 <main id="conversation">
     <div id="no-conversation" style="display:none;">
         <p>Aucune conversation sélectionnée.</p>
@@ -46,6 +32,6 @@
 <script src="firebase-init.js"></script>
 <script src="auth.js"></script>
 <script src="script.js"></script>
-<script>initAuthGuard(true); const uid = new URLSearchParams(location.search).get('uid'); if(uid){displayConversation(uid);}</script>
+<script>fetch("nav.html").then(r=>r.text()).then(html=>{document.getElementById("nav-container").innerHTML=html;initAuthGuard(true); const uid = new URLSearchParams(location.search).get("uid"); if(uid){displayConversation(uid);}});</script>
 </body>
 </html>
