--- a/accueil.html
+++ b/accueil.html
@@ -207,7 +207,7 @@
     <script src="firebase-init.js"></script>
     <script src="auth.js"></script>
     <script src="script.js"></script>
-    <script>fetch("nav.html").then(r=>r.text()).then(html=>{document.getElementById("nav-container").innerHTML=html;initAuthGuard(false);});</script>
+    <script>fetch("nav.html").then(r=>r.text()).then(html=>{document.getElementById("nav-container").innerHTML=html;initAuthGuard(false);initDrawer();});</script>
     <script>
       function initMiniMap() {
         const container = document.getElementById("mini-map");
